--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-asn1crypto==0.24.0
+chmod asn1crypto==0.24.0
 astroid==1.6.6
 backports.functools-lru-cache==1.6.1
 CodeIntel==0.9.3
@@ -37,3 +37,4 @@ virtualenv-clone==0.5.4
 virtualenvwrapper==4.8.4
 wrapt==1.12.1
 zope.cachedescriptors==4.3.1
+django_forms_bootstrap
