--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,96 @@
-chmod asn1crypto==0.24.0
-astroid==1.6.6
-backports.functools-lru-cache==1.6.1
-CodeIntel==0.9.3
-configparser==4.0.2
+asn1crypto==0.24.0
+astroid==2.3.0
+attrs==17.4.0
+Automat==0.6.0
+awscli==1.18.149
+backcall==0.2.0
+blinker==1.4
+botocore==1.18.8
+certifi==2018.1.18
+chardet==3.0.4
+click==6.7
+cloud-init==20.3
+colorama==0.4.3
+command-not-found==0.3
+configobj==5.0.6
+constantly==15.1.0
 cryptography==2.1.4
-Django==1.11.10
-enum34==1.1.6
-futures==3.3.0
+decorator==4.4.2
+distro-info===0.18ubuntu0.18.04.1
+Django==1.11
+django-forms-bootstrap==3.1.0
+docutils==0.15.2
+git-remote-codecommit==1.15.1
+hibagent==1.0.1
+httplib2==0.9.2
+hyperlink==17.3.1
 idna==2.6
-ikpdb==1.2.3
-Inflector==2.0.12
-ipaddress==1.0.17
+ikp3db==1.4.1
+importlib-metadata==2.0.0
+incremental==16.10.1
+ipython==7.16.1
+ipython-genutils==0.2.0
 isort==4.3.21
 jedi==0.11.1
+Jinja2==2.10
+jmespath==0.10.0
+jsonpatch==1.16
+jsonpointer==1.10
+jsonschema==2.6.0
 keyring==10.6.0
 keyrings.alt==3.0
+language-selector==0.1
 lazy-object-proxy==1.5.1
+MarkupSafe==1.0
 mccabe==0.6.1
+netifaces==0.10.4
+oauthlib==2.0.6
+PAM==0.4.2
 parso==0.1.1
 pbr==5.5.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.0.1
+prompt-toolkit==3.0.7
+ptyprocess==0.6.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.1
 pycrypto==2.6.1
+Pygments==2.7.1
 pygobject==3.26.1
-pylint==1.8.1
-pylint-django==0.8.0
-pylint-flask==0.5
+PyJWT==1.5.3
+pylint==2.4.4
+pylint-django==2.3.0
+pylint-flask==0.6
 pylint-plugin-utils==0.6
+pyOpenSSL==17.5.0
+pyserial==3.4
+python-apt==1.6.5+ubuntu0.3
+python-dateutil==2.8.1
+python-debian==0.1.32
 pytz==2020.1
 pyxdg==0.25
+PyYAML==5.3.1
+requests==2.18.4
+requests-unixsocket==0.1.5
+rsa==4.5
+s3transfer==0.3.3
 SecretStorage==2.3.1
-singledispatch==3.4.0.3
+service-identity==16.0.0
 six==1.15.0
-stevedore==1.32.0
-subprocess32==3.5.4
+ssh-import-id==5.7
+stevedore==3.2.2
+systemd-python==234
+traitlets==4.3.3
+Twisted==17.9.0
+typed-ast==1.2.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.25.10
 virtualenv==16.2.0
 virtualenv-clone==0.5.4
 virtualenvwrapper==4.8.4
+wcwidth==0.2.5
 wrapt==1.12.1
-zope.cachedescriptors==4.3.1
-django_forms_bootstrap
+zipp==3.2.0
+zope.interface==4.3.2
