--- a/requirements.txt
+++ b/requirements.txt
@@ -17,10 +17,12 @@ constantly==15.1.0
 cryptography==2.1.4
 decorator==4.4.2
 distro-info===0.18ubuntu0.18.04.1
+dj-database-url==0.5.0
 Django==1.11
 django-forms-bootstrap==3.1.0
 docutils==0.15.2
 git-remote-codecommit==1.15.1
+gunicorn==20.0.4
 hibagent==1.0.1
 httplib2==0.9.2
 hyperlink==17.3.1
@@ -52,6 +54,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.0.1
 prompt-toolkit==3.0.7
+psycopg2==2.8.6
 ptyprocess==0.6.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.1
@@ -91,6 +94,7 @@ virtualenv==16.2.0
 virtualenv-clone==0.5.4
 virtualenvwrapper==4.8.4
 wcwidth==0.2.5
+whitenoise==5.2.0
 wrapt==1.12.1
 zipp==3.2.0
 zope.interface==4.3.2
