--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ httplib2==0.9.2
 hyperlink==17.3.1
 idna==2.6
 incremental==16.10.1
+ipython==7.16.1
 ipython-genutils==0.2.0
 isort==4.3.21
 jedi==0.11.1
@@ -50,7 +51,6 @@ requests-unixsocket==0.1.5
 rsa==4.5
 s3transfer==0.3.3
 SecretStorage==2.3.1
-service-identity==16.0.0
 six==1.15.0
 stevedore==3.2.2
 systemd-python==234
