--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,16 @@
-asn1crypto==0.24.0
-astroid==1.6.6
-backports.functools-lru-cache==1.6.1
-configparser==4.0.2
-cryptography==2.1.4
-Django==1.11.29
-idna==2.6
-Inflector==2.0.12
-ipaddress==1.0.17
-isort==4.3.21
-jedi==0.11.1
-keyring==10.6.0
-keyrings.alt==3.0
-lazy-object-proxy==1.5.2
-mccabe==0.6.1
-parso==0.1.1
-pbr==5.5.1
-Pillow==5.3.0
-psycopg2==2.7.4
-pycrypto==2.6.1
-pylint==1.8.1
-pylint-django==0.8.0
-pylint-flask==0.5
-pylint-plugin-utils==0.6
+asgiref==3.3.1
+certifi==2020.12.5
+chardet==3.0.4
+dj-database-url==0.5.0
+Django==1.11
+django-forms-bootstrap==3.1.0
+idna==2.10
+Pillow==8.0.1
+pkg-resources==0.0.0
+psycopg2==2.8.6
 pytz==2020.4
-pyxdg==0.25
-SecretStorage==2.3.1
-singledispatch==3.4.0.3
-six==1.15.0
-stevedore==1.32.0
-subprocess32==3.5.4
-virtualenv==16.2.0
-virtualenv-clone==0.5.4
-virtualenvwrapper==4.8.4
-wrapt==1.12.1
-zope.cachedescriptors==4.3.1
+requests==2.25.0
+sqlparse==0.4.1
+stripe==2.55.1
+urllib3==1.26.2
+whitenoise==5.2.0
