--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ chardet==3.0.4
 dj-database-url==0.5.0
 Django==1.11
 django-forms-bootstrap==3.1.0
+gunicorn==20.0.4
 idna==2.10
 Pillow==5.3.0
 psycopg2==2.8.6
